force-app/main/default/objects/Supply_Chain__c/Supply_Chain__c.object-meta.xml
<CustomObject>
    <label>Supply Chain</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Food  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Chain</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>