force-app/main/default/objects/Supply_Chain__c/fields/Corresponding_Link__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corresponding Link</label>
    <referenceTo>Supply_Chain__c</referenceTo>
    <relationshipLabel>Supply Chain</relationshipLabel>
    <relationshipName>Supply_Chain</relationshipName>
    <type>Lookup</type>
</CustomField>