force-app/main/default/objects/Supply_Chain__c/fields/Days_Since_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Initiated__c</fullName>
    <formula>NOW() -Initiated_Declaration_Request_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Initiated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>