force-app/main/default/objects/Supply_Chain__c/fields/Food_Supply_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Food_Supply_Tracing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Food Supply Tracing</label>
    <referenceTo>Food_Supply_Tracing__c</referenceTo>
    <relationshipLabel>Supply Chain</relationshipLabel>
    <relationshipName>Supply_Chain</relationshipName>
    <type>Lookup</type>
</CustomField>