force-app/main/default/objects/Supply_Chain__c/fields/Initiated_Declaration_Request_On__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Declaration_Request_On__c</fullName>
    <label>Initiated Declaration Request On</label>
    <type>DateTime</type>
</CustomField>