force-app/main/default/objects/Supply_Chain__c/fields/Is_End_Node__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is End Node</label>
    <type>Checkbox</type>
</CustomField>