force-app/main/default/objects/Supply_Chain__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate the company who reported this record</description>
    <label>Reported By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chain (Originally Reported By)</relationshipLabel>
    <relationshipName>Supply_Chain2</relationshipName>
    <type>Lookup</type>
</CustomField>