force-app/main/default/objects/Supply_Chain__c/fields/Reported_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Name__c</fullName>
    <formula>Reported_By__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported By Name</label>
    <type>Text</type>
</CustomField>