force-app/main/default/objects/Supply_Chain__c/fields/Source_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Source_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Confirmed</label>
    <type>Checkbox</type>
</CustomField>