force-app/main/default/objects/Supply_Chain__c/fields/Source_From__c.field-meta.xml
<CustomField>
    <fullName>Source_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chain</relationshipLabel>
    <relationshipName>Supply_Chain</relationshipName>
    <type>Lookup</type>
</CustomField>