force-app/main/default/objects/Supply_Chain__c/fields/Source_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_From_Name__c</fullName>
    <formula>Source_From__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source From Name</label>
    <type>Text</type>
</CustomField>