force-app/main/default/objects/Supply_Chain__c/fields/Supply_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Supply_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply Confirmed</label>
    <type>Checkbox</type>
</CustomField>