force-app/main/default/objects/Supply_Chain__c/fields/Supply_To__c.field-meta.xml
<CustomField>
    <fullName>Supply_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Chain (Supply To)</relationshipLabel>
    <relationshipName>Supply_Chain1</relationshipName>
    <type>Lookup</type>
</CustomField>