force-app/main/default/objects/Supply_Chain__c/fields/Supply_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Supply_To_Name__c</fullName>
    <formula>Supply_To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply To Name</label>
    <type>Text</type>
</CustomField>