force-app/main/default/objects/Supply_Chain__c/fields/Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Timeliness__c</fullName>
    <formula>IF( Days_Since_Initiated__c &lt; 3, &apos;🟢&apos;,IF(Days_Since_Initiated__c &lt;6, &apos;🟡&apos;, &apos;🔴&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeliness</label>
    <type>Text</type>
</CustomField>