force-app/main/default/objects/Supply_Chain__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>L (litre)</fullName>
            </value>
            <value>
                <fullName>m (metre)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>